Feature: Adding the suggestion route
