# app/controllers/shorts_controller.rb
@@ -1,3 +1,5 @@
+require 'uri'
+
 #
 # Controller for Short actions including lookup
 #
@@ -7,7 +9,7 @@ class ShortsController < ApplicationController
   before_action :authenticate!,   only: %i[destroy]
   before_action :load_short,      only: %i[destroy show]
   before_action :authorize!,      only: %i[destroy]
-  before_action :validate_params, only: %i[create]
+  before_action :validate_params, only: %i[create suggest]
 
   def show
     redirect_to(@short.full_url)
@@ -21,7 +23,7 @@ class ShortsController < ApplicationController
     end
 
     @short = Short.create(details)
-    return render(json: @short.marshall, status: 200) if @short.valid?
+    return render(json: @short.marshall, status: 201) if @short.valid?
 
     errs = @short.errors.map(&:full_message)
     render(json: { message: I18n.t('errors.400'), errors: errs }, status: 400)
@@ -30,6 +32,17 @@ class ShortsController < ApplicationController
   def destroy
     status = @short.destroy ? 200 : 400
     render(plain: '', status: status)
+  end
+
+  def suggest
+    hostname = parse_hostname(short_params[:full_url])
+    if hostname.blank?
+      resp = { message: I18n.t('errors.400'), errors: I18n.t('errors.bad_host') }
+      return render(json: resp, status: 400)
+    end
+
+    slug = Suggestion.new(hostname).slug
+    render(json: { hostname: hostname, short: slug }, status: 200)
   end
 
   private
@@ -58,5 +71,12 @@ class ShortsController < ApplicationController
     return nil if token_for_request && token_times_match
 
     render_error(401)
+  end
+
+  def parse_hostname(input)
+    given_host = URI.parse(input)&.host
+    return '' if given_host.blank?
+
+    given_host.sub('www.', '').split('.').first
   end
 end
